# sqlx-mysql-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
config/conf.d/: docker.cnf
sqlx_mysql_json/: Cargo.toml
sqlx_mysql_json/src/: base64.rs  error.rs  execute.rs  lib.rs  parse.rs  row.rs  wkb.rs
src/: error.rs  main.rs  pools.rs  regarding_transactions.md  routes.rs
