[package]
name = "sqlx-mysql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx_mysql_json = { path = "sqlx_mysql_json" }
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
dotenv = "0.15.0"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono", "json", "bigdecimal"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"]}
serde = "1.0.193"
serde_json = "1.0.108"
derive_more = "0.99.17"

