[package]
name = "sqlx_mysql_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = ["mysql", "chrono", "json", "bigdecimal"]}
#geo-types = {version = "0.7.12", features = ["serde"]}
geo-types = {version = "0.7.12"}
geojson = {version = "0.24.1", features = ["geo-types"]}
#wkb = "0.7.1" #copy paste this instead. its good except multipoint is parsed wrong
num-traits = "0.2.17"

